fix #2729-Edit buttons not aligned properly

--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -2394,7 +2394,7 @@ fieldset {
 legend {
   display: block;
   width: 100%;
-  padding: 0;
+  padding: 10px;
   margin-bottom: 20px;
   font-size: 21px;
   line-height: inherit;
